kubernetes/apps/default/flood/rtorrent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: rtorrent
  name: rtorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rtorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/flood-default: "true"
        io.kompose.service: rtorrent
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
      - args:
        - -o
        - network.port_range.set=6881-6881,system.daemon.set=true
        image: jesec/rtorrent
        name: rtorrent
        ports:
        - containerPort: 6881
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: flood-claim1
        - mountPath: /data
          name: download-claim0
      restartPolicy: Always
      volumes:
      - name: download-claim0
        persistentVolumeClaim:
          claimName: download-claim0
      - name: flood-claim1
        persistentVolumeClaim:
          claimName: flood-claim1
status: {}
# /config/.local/share/rtorrent/download/
