kubernetes/apps/default/flood/rtorrent-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: rtorrent
  name: rtorrent
spec:
  ports:
  - name: "6881"
    port: 6881
    targetPort: 6881
  selector:
    io.kompose.service: rtorrent
status:
  loadBalancer: {}
