kubernetes/apps/default/flood/flood-ingress.yaml
# Source: mainsail/templates/moonraker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flood
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: 192.168.2.174
    external-dns.home.arpa/enabled: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "flood.ninjawombat.space"
    secretName: flood.ninjawombat.space
  rules:
  - host: "flood.ninjawombat.space"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: flood
            port:
              number: 3001
